# oribot

./: .gitignore  .gitmodules  README.md  monitor.sh  push.sh  sample.rviz  test.sh  velocity.py
docker/: Dockerfile  Dockerfile.bak  Dockerfile.base  Dockerfile.nav2  Dockerfile.nav2.oribot  Dockerfile.oribot  Dockerfile.oribot.isaac  build.base.sh  build.nav2.oribot.sh  build.nav2.sh  build.oribot.sh  build.sh  build_isaac.sh  build_oribot.sh  docker-compose.bak  docker-compose.yml  novnc.env  oribot.env  tag.sh
docker-nginx/: Dockerfile  nginx.conf
docker/scripts/: console.sh  oribot.sh  oribot_entrypoint.sh  ros.sh  ros_deep_learning.sh  ros_entrypoint.sh  run.sh  run_console.sh  run_dev.sh  run_oribot.sh  run_ros.sh  run_trainer.sh  torchinstall.sh  train.sh  train_entrypoint.sh
launch/: oribot.launch
ros2_ws/src/: drivetrain.py
service/: install.sh  oribot.service
src/: encoder.py  encoder2.py
src/description/: oribot_description.urdf
src/oribot/: package.xml  setup.cfg  setup.py
src/oribot/launch/: oribot.launch.xml  oribot_isaac.launch.xml
src/oribot/oribot/: app.py  train.py  (+4 more)
src/oribot_autodrive/: package.xml  setup.cfg  setup.py
src/oribot_bringup/: CMakeLists.txt  package.xml
src/oribot_camera/: package.xml  setup.cfg  setup.py
src/oribot_description/: CMakeLists.txt  package.xml
src/oribot_driver/: package.xml  setup.cfg  setup.py
src/oribot_imu/: package.xml  setup.cfg  setup.py
src/oribot_interfaces/: CMakeLists.txt  package.xml
src/oribot_odometry/: CMakeLists.txt  package.xml
src/oribot_odometry/src/: odometry_node.cpp
(+31 files in other folders)
